# analyticRT

./: .gitignore  CMakeLists.txt  LICENSE  README.md
data/: spectrum_data.hpp  spectrum_plots.hpp  trajectory_data.hpp  trajectory_plots.hpp
models/: fiore.hpp  sqrtlog.hpp  square_root.hpp
models/isobars/: breit_wigner.hpp  hypergeometric.hpp  k_matrix.hpp  omnes.hpp  truncated.hpp
models/trajectories/: fiore.hpp  iterative.hpp  k_matrix.hpp  linear.hpp  polynomial.hpp  sqrtlog.hpp  unitary.hpp  unitary_old.hpp  unitary_v0.hpp  unitary_v1.hpp  unitary_v2.hpp
scripts/: compare.cpp  fiore_results.cpp  fit.cpp  iterations.cpp  plot_iterations.cpp  results.cpp
scripts/partial_waves/: kmatrix_fit.cpp  pwave.cpp  swave.cpp  truncation_test.cpp
scripts/rho/: fit.cpp  replot.cpp
scripts/rho_PW/: pwave.cpp
scripts/rho_spectrum/: fit.cpp  iterations.cpp  results.cpp
scripts/rho_spectrum_fits/: compare.cpp  fit.cpp  iterations.cpp  results.cpp
scripts/sigma/: fit.cpp  swave.cpp
scripts/sigma_PW/: swave.cpp
scripts/spectra/: compare.cpp  fit.cpp  iterations.cpp  results.cpp
src/: ANALYTICRTLinkDef.h  CMakeLists.txt  amplitude.cpp  amplitude.hpp  cgamma.cpp  cgamma.hpp  constants.hpp  data_set.hpp  debug.hpp  elementwise.hpp  fitter.hpp  hyp_2F1.cpp  isobar.cpp  isobar.hpp  iterable.cpp  iterable.hpp  key.hpp  kinematics.hpp  pipi.cpp  pipi.hpp  plot.cpp  plot.hpp  plotter.cpp  plotter.hpp  print.hpp  trajectory.cpp  trajectory.hpp
src/cling/: Load.C  analyticRT.cpp
src/core/: amplitude.cpp  amplitude.hpp  constants.hpp  debug.hpp  fitter.cpp  fitter.hpp  hyp_2F1.hpp  isobar.cpp  isobar.hpp  key.hpp  kinematics.hpp  legendre_P.hpp  pipi.hpp  pipi_scattering.cpp  pipi_scattering.hpp  print.hpp  trajectory.cpp  trajectory.hpp
src/fitting/: fitter.cpp  fitter.hpp  spectrum_fitter.cpp  spectrum_fitter.hpp  trajectory_fitter.cpp  trajectory_fitter.hpp
src/plotting/: colors.hpp  data_set.hpp  elementwise.hpp  plot.cpp  plot.hpp
